New version (not working)

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,17 +1,21 @@
-FROM debian:buster
+FROM	debian:buster
 
-RUN apt update -y && apt upgrade -y && apt install nginx openssl -y
+# Install everything needed
+RUN		apt-get update -y && apt-get upgrade -y && apt-get install -y nginx openssl
 
-RUN mkdir -p /etc/nginx/ssl
+# nginx SSL
+RUN mkdir /etc/nginx/ssl
+RUN openssl req -newkey rsa:4096 -x509 -sha256 -days 365 -nodes \
+       -out /etc/nginx/ssl/hcorrea-.crt \
+       -keyout /etc/nginx/ssl/hcorrea-.key \
+       -subj "/C=PT/ST=Lisbon/L=Lisbon/O=42 School/OU=hcorrea-/CN=hcorrea-/"
 
-RUN openssl req -newkey rsa:4096 \
-	-x509 -sha256 -days 365 -nodes \
-	-subj "/C=PT/L=Lisbon/O=42/CN=hcorrea-.42.fr" \
-	-out /etc/nginx/ssl/hcorrea-.crt \
-	-keyout /etc/nginx/ssl/hcorrea-.key
+COPY ./conf/nginx.conf /etc/nginx/conf.d
 
-COPY conf/nginx.conf /etc/nginx/conf.d/nginx.conf
+# nginx config
+RUN mkdir -p /run/nginx
 
-EXPOSE 443
+EXPOSE	443
 
-CMD [ "nginx", "-g", "daemon off;" ]
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"]
