--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,21 +1,31 @@
 server {
-	#SSL/TLS Configuration
 	listen 443 ssl;
-	ssl_protocols TLSv1.2 TLSv1.3;
-	ssl_certificate /etc/nginx/ssl/hcorrea-.crt;
-	ssl_certificate_key /etc/nginx/ssl/hcorrea-.key;
+	listen [::]:443 ssl;
 
-	#root and index and server_name
+	server_name hcorrea-.42.fr;
+	# On note le cert et la key (necessaire protocole ssl)
+	ssl_certificate		/etc/nginx/ssl/hcorrea-.crt;
+	ssl_certificate_key	/etc/nginx/ssl/hcorrea-.key;
+
+	# Protocole d'encryptions pour les cles ssl
+	ssl_protocols		TLSv1.2 TLSv1.3;
+
+	# Fichiers a afficher et dossier ou les chercher
 	root /var/www/html;
-	server_name hcorrea-.42.fr www.hcorrea-.42.fr;
-	index index.php index.html index.htm;
+	index index.php index.nginx-debian.html;
 
+	# Directive necessaire pour les endpoints, 
+	# Fast cgi necessaire pour nginx pour "traduire" le php
 	location / {
-		try_files $uri $uri/ =404;
+		try_files $uri $uri/ /index.php$is_args$args;
 	}
 
 	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-		#fastcgi_pass wordpress:9000;
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		#fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
+		fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
 	}
 }
