New version (not working)

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,7 +12,7 @@ server {
 
 	# Fichiers a afficher et dossier ou les chercher
 	root /var/www/html;
-	index index.php index.nginx-debian.html;
+	index index.php index.html;
 
 	# Directive necessaire pour les endpoints, 
 	# Fast cgi necessaire pour nginx pour "traduire" le php
