Some changes made

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -13,27 +13,24 @@ RUN apt-get update -y && apt-get upgrade -y && apt-get -y install \
 	php-mbstring
 RUN rm -rf /var/lib/apt/lists/*
 
-# I need to install wp_cli command and put it in the right directory /usr/local/bin
+# Install wp_cli and place in the right directory /usr/local/bin
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
   && chmod +x wp-cli.phar \
   && mv wp-cli.phar /usr/local/bin/wp
 
-# Copy the .conf in the html directory
+# Copy .conf to html directory
 COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d/
 
-#Create the folder to enable php start
 RUN mkdir /run/php
 
-#we copy the script, give the right to launch it in local on our computer
+# Copy the script and give rights to be executed
 COPY ./tools/wp_conf.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/wp_conf.sh
 ENTRYPOINT ["/usr/local/bin/wp_conf.sh"]
 
-#We go the html directory
 WORKDIR /var/www/html/
 
-#We expose the 9000 port
 EXPOSE 9000
 
-#Launch PHP FPM in foreground and ignore deamonize from conf file (-F)
+# Launch PHP FPM in background and ignore deamonize from conf file (-F)
 CMD ["/usr/sbin/php-fpm7.3", "-F"]
