--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -15,11 +15,11 @@ services:
   mariadb:
     container_name: mariadb
     build: ./requirements/mariadb
-    #volumes allow to store in a persistent disk the content in a local disk
-    #db_data is a volume created by docker directly
+    # Volumes allow to store in a persistent disk the content in a local disk
+    # db_data is a volume created by Docker directly
     volumes:
       - mariadb_data:/var/lib/mysql
-    # in case of problem we restart automatically the container
+    # In case of problem we restart automatically the container
     networks:
       - network
     restart: always
@@ -28,7 +28,7 @@ services:
 
   wordpress:
     container_name: wordpress
-    #Create a depedency between the 2 container, db will be launched before
+    # Create a depedency between the 2 container, db will be launched before
     depends_on:
       - mariadb
     build:
