--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:buster
+FROM debian:bullseye
 
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y mariadb-server mariadb-client vim
 RUN rm -rf /var/lib/apt/lists/*
@@ -10,10 +10,10 @@ RUN mkdir -p /var/run/mysqld \
 && chown -R mysql:mysql /var/run/mysqld \
 && chmod 777 /var/run/mysqld
 
-
 # Copy of the .sh in the /bin of the container to be able to run the program
 # Give the right to execute + launch the .sh
 COPY ./tools/mariadb.sh /usr/local/bin/
+COPY ./conf/wp-comments.sql /usr/local/bin/
 RUN chmod +x /usr/local/bin/mariadb.sh
 
 ENTRYPOINT [ "/usr/local/bin/mariadb.sh" ]
