--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,29 +1,29 @@
 server {
-	listen 443 ssl;
-	listen [::]:443 ssl;
+    listen 443 ssl;
 
-	server_name hcorrea-.42.fr;
-	# Set ssl certificate and key
-	ssl_certificate		/etc/nginx/ssl/hcorrea-.crt;
-	ssl_certificate_key	/etc/nginx/ssl/hcorrea-.key;
+    server_name hcorrea-.42.fr;
 
-	# Encryptation protocol for ssl
-	ssl_protocols		TLSv1.2 TLSv1.3;
+    # Set ssl certificate and key
+    ssl_certificate /etc/nginx/ssl/hcorrea-.crt;
+    ssl_certificate_key /etc/nginx/ssl/hcorrea-.key;
 
-	root /var/www/html;
-	index index.php index.html;
+    # Encryption protocols for ssl
+    ssl_protocols TLSv1.2 TLSv1.3;
 
-	# Folder needed for endpoints
+    root /var/www/html;
+    index index.php index.html;
+
+    # Folder needed for endpoints
 	# Fast cgi needed for nginx to "translate" php
-	location / {
-		try_files $uri $uri/ /index.php$is_args$args;
-	}
+    location / {
+        try_files $uri $uri/ /index.php$is_args$args;
+    }
 
 	location ~ \.php$ {
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 		fastcgi_index index.php;
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        fastcgi_pass wordpress:9000;
 	}
 }
