--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,17 @@
-MYSQL_USER=kasakh
-MYSQL_PASSWORD=pass123
-MYSQL_ROOT_PASSWORD=rootpass123
 MYSQL_HOSTNAME=mariadb
-MYSQL_DATABASE=wordpress
+MYSQL_ROOT_PASSWORD=rootpass123
+
+WP_DB_NAME=wordpress
+WP_DB_USER=kasakh
+WP_DB_PASS=pass123
+
+DOMAIN=localhost
+
+WP_TITLE=Inception
+WP_ADMIN_USER=kasakh
+WP_ADMIN_PASS=password
+WP_ADMIN_MAIL=kasakh@gmail.com
+
+WP_USER=testUser
+WP_PASS=userpass
+WP_MAIL=testUser@gmail.com
