--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,22 +3,12 @@ FROM debian:bullseye
 RUN apt-get update -y && apt-get upgrade -y && apt-get install -y mariadb-server mariadb-client vim
 RUN rm -rf /var/lib/apt/lists/*
 
-# Allow to run the daemon of mysql
-# Purge and re-create /var/lib/mysql with appropriate ownership
-# Ensure that /var/run/mysqld (used for socket and lock files) is writable regardless of the UID our mysqld instance ends up having at runtime
-RUN mkdir -p /var/run/mysqld \
-&& chown -R mysql:mysql /var/run/mysqld \
-&& chmod 777 /var/run/mysqld
-
 # Copy of the .sh in the /bin of the container to be able to run the program
 # Give the right to execute + launch the .sh
 COPY ./tools/mariadb.sh /usr/local/bin/
-COPY ./conf/wp-comments.sql /usr/local/bin/
+#COPY ./conf/wp-comments.sql /usr/local/bin/
 RUN chmod +x /usr/local/bin/mariadb.sh
 
 ENTRYPOINT [ "/usr/local/bin/mariadb.sh" ]
 
 EXPOSE 3306
-
-# Command to launch mariadb and enable the database to listen globally - also can be put on mysqldump.cnf file
-CMD ["mysqld", "--bind-address=0.0.0.0"]
